Edits and corrections to EA 3.1-10, 9.4

--- a/01_agama/ekottarika/03/EA_03_02.md
+++ b/01_agama/ekottarika/03/EA_03_02.md
@@ -17,13 +17,13 @@ next: EA_03_03.html
 2\. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. After cultivating this one thing, they’ll become well known and achieve a great reward and all good and complete attainments. They’ll attain the sweet-tasting dew and arrive at the unconditioned state. They then will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves. What’s this one thing? It’s called recollecting the Dharma.”
 {:#p2}
 
-3\. The Buddha addressed the monks, “How does someone who cultivates the recollection of the Dharma become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruit of the ascetic, and bring about nirvāṇa themselves?”
+3\. The Buddha addressed the monks, “How does someone who cultivates the recollection of the Dharma become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves?”
 {:#p3}
 
 4\. The monks then said to the Bhagavān, “What the Tathāgata says is the source of the teachings. Please, Bhagavān, explain the wonderful meaning of this for the monks. After we hear it from the Tathāgata, the monks will accept and retain it.”
 {:#p4}
 
-5\. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well! I will discern this for you in detail.”
+5\. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”
 {:#p5}
 
 They replied, “Yes, Bhagavān.”
@@ -31,20 +31,23 @@ They replied, “Yes, Bhagavān.”
 6\. Once the monks had accepted the teaching, the Bhagavān told them, “Suppose a monk sits cross-legged with correct posture and thought and fixes his attention on what’s in front of him. With no other idea, he focuses on recollecting the Dharma.
 {:#p6}
 
-7\. He rids himself of the craving for desires, doesn’t have any afflictions, and thoughts of thirsty craving don’t arise anymore. With the correct Dharma, he arrives at being desireless amidst desires and parts with the illness of the bonds and hindrances. This Dharma is like a breeze of many fragrances. His thinking doesn’t have any flaws or confused ideas.
+7\. “He rids himself of the craving for desires, doesn’t have any afflictions, and thoughts of thirsty craving don’t arise anymore. With the correct Dharma, he arrives at being desireless amidst desires and parts with the illness of the bonds and hindrances. This Dharma is like a breeze of many fragrances. His thinking doesn’t have any flaws or confused ideas.
 {:#p7}
 
-8\. “This, monks, is how someone who cultivates the recollection of the Dharma will become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruit of the ascetic, and bring about nirvāṇa themselves. Therefore, monks, one should constantly recollect the Dharma and not part from it. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”
+8\. “This, monks, is how someone who cultivates the recollection of the Dharma will become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves.
 {:#p8}
 
-9\. When the monks heard what the Buddha taught, they rejoiced and approved.
+9\. “Therefore, monks, one should constantly recollect the Dharma and not part from it. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”
 {:#p9}
+
+10\. When the monks heard what the Buddha taught, they rejoiced and approved.
+{:#p10}
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 30 January 2023
+Last Revised: 11 March 2023
 {: .revised}
 
 ---
