--- a/01_agama/ekottarika/03/EA_03_07.md
+++ b/01_agama/ekottarika/03/EA_03_07.md
@@ -17,13 +17,13 @@ next: EA_03_08.html
 2\. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. After cultivating this one thing, they’ll become well known and achieve a great reward and all good and complete attainments. They’ll attain the sweet-tasting dew and arrive at the unconditioned state. They then will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves. What’s this one thing? It’s called recollecting peace.”
 {:#p2}
 
-3\. The Buddha addressed the monks, “How does someone who cultivates the recollection of peace become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruit of the ascetic, and bring about nirvāṇa themselves?”
+3\. The Buddha addressed the monks, “How does someone who cultivates the recollection of peace become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves?”
 {:#p3}
 
 4\. The monks then said to the Bhagavān, “What the Tathāgata says is the source of the teachings. Please, Bhagavān, explain the wonderful meaning of this for the monks. After we hear it from the Tathāgata, the monks will accept and retain it.”
 {:#p4}
 
-5\. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well! I will discern this for you in detail.”
+5\. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”
 {:#p5}
 
 They replied, “Yes, Bhagavān.”
@@ -31,27 +31,30 @@ They replied, “Yes, Bhagavān.”
 6\. Once the monks had accepted the teaching, the Bhagavān told them, “Suppose a monk sits cross-legged with correct posture and thought and fixes his attention on what’s in front of him. With no other idea, he focuses on recollecting peace.
 {:#p6}
 
-7\. “‘Peace’ means calming the heart, mind, and ideas. One’s intent and disposition becomes careful, honest, and without abruptness. Being focused all the time, they are happy living in seclusion and regularly pursuing the methods of entering samādhi. They are always mindful and not covetous and rise up to a greater light.[\[1\]](#n1){:#ref1}
+7\. “‘Peace’ means calmness of heart, mind, and ideas. One’s intent and disposition becomes careful, honest, and without abruptness. Being focused all the time, they are happy living in seclusion and regularly pursuing the methods of entering samādhi. They are always mindful, not covetous, and rise up to a greater light.[\[1\]](#n1){:#ref1}
 {:#p7}
 
-8\. “This is how someone who cultivates the recollection of peace will become well known,[\[2\]](#n2){:#ref2} achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruit of the ascetic, and bring about nirvāṇa themselves. Therefore, monks, one should constantly recollect peace and not part from it. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”
+8\. “This is how someone who cultivates the recollection of peace will become well known,[\[2\]](#n2){:#ref2} achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves.
 {:#p8}
 
-9\. When the monks heard what the Buddha taught, they rejoiced and approved.
+9\. “Therefore, monks, one should constantly recollect peace and not part from it. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”
 {:#p9}
+
+10\. When the monks heard what the Buddha taught, they rejoiced and approved.
+{:#p10}
 
 ---
 
 ### Notes
 
-1. {:#n1} *rise up to a greater light.* C. 勝光上達. This esoteric passage seems to refer to spiritual progress in general. The verb 上達 is used occasionally in other Chinese translations (e.g., at T152.3.8a21 and T291.10.603b8) to mean ascending into the sky or up to a heavenly place. This would suggest 勝光 (“greater light”) may refer to a heavenly rebirth. Indeed, in other texts 勝光 is usually associated with heavenly light, such as when a god visits the Buddha at night. It could also refer to the light of wisdom produced by buddhas and bodhisattvas. Neither term (勝光 or 上達) occurs again in EĀ. [\[back\]](#ref1)
+1. {:#n1} *rise up to a greater light.* C. 勝光上達. This esoteric expression seems to refer to spiritual progress in general. The verb 上達 is used occasionally in other Chinese translations (e.g., at T152.3.8a21 and T291.10.603b8) to mean ascending into the sky or up to a heavenly place. This would suggest a “greater light” refers to a heavenly rebirth. In other texts, “greater light” (勝光) is usually associated with heavenly light, such as the luminance created by a god visiting the Buddha at night. Neither term (勝光 or 上達) occurs again in EĀ. [\[back\]](#ref1)
 2. {:#n2} *This is how … well known.* C. 如是，諸比丘，名曰念休息。便得具足⋯. The Taisho edition appears to be corrupt, for it omits mention of becoming well known. Lit., it reads: “Thus, monks, this is called ‘recollecting peace.’ Then, attaining its perfection …”. I’ve translated the passage assuming that the original followed the format of the initial sūtras in this chapter (i.e., 「是謂，諸比丘，若念休息者便有名譽⋯」). [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 6 February 2023
+Last Revised: 11 March 2023
 {: .revised}
 
 ---
