--- a/01_agama/ekottarika/03/EA_03_09.md
+++ b/01_agama/ekottarika/03/EA_03_09.md
@@ -17,13 +17,13 @@ next: EA_03_10.html
 2\. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. After cultivating this one thing, they’ll become well known and achieve a great reward and all good and complete attainments. They’ll attain the sweet-tasting dew and arrive at the unconditioned state.[\[1\]](#n1){:#ref1} They then will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves. What’s this one thing? It’s called recollecting the body.”
 {:#p2}
 
-3\. The Buddha addressed the monks, “How does someone who cultivates the recollection of the body become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruit of the ascetic, and bring about nirvāṇa themselves?”
+3\. The Buddha addressed the monks, “How does someone who cultivates the recollection of the body become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves?”
 {:#p3}
 
 4\. The monks then said to the Bhagavān, “What the Tathāgata says is the source of the teachings. Please, Bhagavān, explain the wonderful meaning of this for the monks. After we hear it from the Tathāgata, the monks will accept and retain it.”
 {:#p4}
 
-5\. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well! I will discern this for you in detail.”
+5\. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”
 {:#p5}
 
 They replied, “Yes, Bhagavān.”
@@ -34,18 +34,21 @@ They replied, “Yes, Bhagavān.”
 7\. “‘Recollecting the body’ means the beard, hair, nails, teeth, skin, muscles, sinews, and bones; gall bladder, liver, lungs, heart, spleen, kidneys, large and small intestines, white membrane, and bladder; feces, urine, the contents of the stomach,[\[2\]](#n2){:#ref2} tears, saliva, and snot; and pus, blood, fat, cerebral fluid,[\[3\]](#n3){:#ref3} and brain. What is the body made of? ‘This is earth element.’ ‘This is water element.’ ‘This is fire element.’ ‘This is air element.’ How is it made from the seeds of father and mother? Where does it come from? Who made it? From whence did the eye, ear, nose, tongue, body, and mind ultimately arise?
 {:#p7}
 
-8\. “This is how someone who cultivates the recollection of the body will become well known,[\[4\]](#n4){:#ref4} achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruit of the ascetic, and bring about nirvāṇa themselves. Therefore, monks, one should constantly recollect the body and not part from it. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”
+8\. “This is how someone who cultivates the recollection of the body will become well known,[\[4\]](#n4){:#ref4} achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves.
 {:#p8}
 
-9\. When the monks heard what the Buddha taught, they rejoiced and approved.
+9\. “Therefore, monks, one should constantly recollect the body and not part from it. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”
 {:#p9}
+
+10\. When the monks heard what the Buddha taught, they rejoiced and approved.
+{:#p10}
 
 ---
 
 ### Notes
 
 1. {:#n1} *the unconditioned state*. C. 無爲道. The C. here is inconsistent with the other sūtras in this chapter. I.e., 無爲處 (“unconditioned abode”) has been changed to 無爲道 (“unconditioned awakening”). I’ve disregarded this change as a translation or editing error. The expression refers to becoming an arhat according to the commentary (cf. T1507.25.37b), so the difference is not that significant, in any case. [\[back\]](#ref1)
-2. {:#n2} *the contents of the stomach*. C. 百葉滄蕩脾泡. 百葉 was used to refer to the multi-stage stomachs of animals like cows and sheep. Overall, the passage appears garbled, as other editions rewrote it as 滄腸胃泡 or 倉腸胃脬. The gist of it appears to be the liquid contents of the stomach. [\[back\]](#ref2)
+2. {:#n2} *the contents of the stomach*. C. 百葉滄蕩脾泡. 百葉 was used to refer to the multi-stage stomachs of animals like cows and sheep. Overall, the passage appears garbled, and later editions rewrote it as 滄腸胃泡 or 倉腸胃脬. The gist of it appears to be the liquid contents of the stomach. [\[back\]](#ref2)
 3. {:#n3} *cerebral fluid*. C. 漾髑髏. Lit. “cranial fluid.” [\[back\]](#ref3)
 4. {:#n4} *This is how … well known.* C. 如是，諸比丘，名曰念身。便得具足⋯. The Taisho edition appears to be corrupt, for it omits mention of becoming well known. Lit., it reads: “Thus, monks, is called ‘recollecting the body.’ Then, attaining its perfection …”. I’ve translated the passage assuming that the original followed the format of the initial sūtras in this chapter (i.e., 「是謂，諸比丘，若念身者便有名譽⋯」). [\[back\]](#ref4)
 
@@ -53,7 +56,7 @@ They replied, “Yes, Bhagavān.”
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 6 February 2023
+Last Revised: 11 March 2023
 {: .revised}
 
 ---
