--- a/01_agama/ekottarika/09/EA_09_04.md
+++ b/01_agama/ekottarika/09/EA_09_04.md
@@ -33,7 +33,7 @@ next: EA_09_05.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 15 February
+Last Revised: 15 February 2023
 {: .revised}
 
 ---
