--- a/01_agama/ekottarika/03/EA_03_01.md
+++ b/01_agama/ekottarika/03/EA_03_01.md
@@ -17,13 +17,13 @@ next: EA_03_02.html
 2\. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. After cultivating this one thing, they’ll become well known and achieve a great reward and all good and complete attainments. They’ll attain the sweet-tasting dew and arrive at the unconditioned state.[\[2\]](#n2){:#ref2} They then will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves. What’s this one thing? It’s called recollecting the Buddha.”
 {:#p2}
 
-3\. The Buddha addressed the monks, “How does someone who cultivates the recollection of the Buddha become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruit of the ascetic, and bring about nirvāṇa themselves?”
+3\. The Buddha addressed the monks, “How does someone who cultivates the recollection of the Buddha become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves?”
 {:#p3}
 
 4\. The monks then said to the Bhagavān, “What the Tathāgata says is the source of the teachings. Please, Bhagavān, explain the wonderful meaning of this for the monks. After we hear it from the Tathāgata, the monks will accept and retain it.”
 {:#p4}
 
-5\. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well! I will discern this for you in detail.”
+5\. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”
 {:#p5}
 
 They replied, “Yes, Bhagavān.”
@@ -40,8 +40,11 @@ They replied, “Yes, Bhagavān.”
 9\. “The Tathāgata’s body of wisdom was a knowledge without limit or impediment. The Tathāgata’s body had accomplished liberation, had reached the end of destinations, and no longer would decide: ‘I will fall into birth and death again.’ The Tathāgata’s body had reached knowing and seeing the city [of nirvāṇa]. He knew whether other people had the capacity to be liberated or not. ‘Here they die, and there they’re born. Round they turn, reborn until the end of birth and death.’ He fully knew who was liberated and who wasn’t.
 {:#p9}
 
-10\. “This is how someone who cultivates the recollection of the Buddha will become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruit of the ascetic, and bring about nirvāṇa themselves. Therefore, monks, one should constantly recollect the Buddha and not part from it. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”
+10\. “This is how someone who cultivates the recollection of the Buddha will become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves.
 {:#p10}
+
+11\. “Therefore, monks, one should constantly recollect the Buddha and not part from it. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”
+{:#p11}
 
 12\. When the monks heard what the Buddha taught, they rejoiced and approved.
 {:#p12}
@@ -50,16 +53,16 @@ They replied, “Yes, Bhagavān.”
 
 ### Notes
 
-1. {:#n1} This sūtra is an expanded explanation of EĀ 2.1. The commentary to the Chinese translation says that EĀ 2.1-10 were taught to intelligent disciples, and EĀ 3.1-10 were taught to dul-witted disciples. Thus, in the second case, more elaboration was required. It would make sense that this may have happened during the Buddha’s life; i.e., that students who already understood a teaching would need only a reference to it, while new students would require a full explanation. [\[back\]](#ref1)
-2. {:#n2} *become well known … unconditioned state.* This passage has been added to the introduction found in Chapter 2. The commentary (cf. T1507.25.37b9-12) associates these five attainments with rewards in the afterlife: “Well known” (名譽) refers to becoming a noble wheel-turning king, “great reward” (大果報) refers to birth as the god Śakra, “all good and complete attainments” (諸善普至) refers to birth in the Brahma Heaven, “the sweet-tasting nectar” (甘露味) refers to becoming a *pratyeka buddha*, and “the unconditioned state” (無爲處) refers to the fruit of the *arhat*.\
+1. {:#n1} This sūtra is an expanded explanation of [EĀ 2.1](){:target="_blank"}. This pattern holds true for the remainder of the chapter as well. The commentary to the Chinese translation says that EĀ 2.1-10 were taught to intelligent disciples, and EĀ 3.1-10 were taught to dull-witted disciples. Thus, in the second case, more elaboration was required. It would make sense that this may have happened during the Buddha’s life; i.e., that students who already understood a teaching would need only a reference to it, while new students would require a full explanation. [\[back\]](#ref1)
+2. {:#n2} *become well known … unconditioned state.* This passage has been added to the introduction found in Chapter 2. The commentary (cf. T1507.25.37b9-12) associates these five attainments with rewards in the afterlife: “Well known” (名譽) refers to becoming a noble wheel-turning king, “great reward” (大果報) refers to birth as the god Śakra, “all good and complete attainments” (諸善普至) refers to birth in the Brahma Heaven (presumably as a result of mastering meditation), “the sweet-tasting nectar” (甘露味) refers to becoming a *pratyeka buddha*, and “the unconditioned state” (無爲處) refers to the fruit of the *arhat*.\
 *sweet dew*. C. 甘露, S. *amṛta*, P. *amata*. The Indic refers to a special liquid or juice that gave the gods their immortality when they consumed it. It was equivalent to the *ambrosia* that Greek gods ate. In both cases, the words lit. mean “immortality,” (i.e., deathless or undying). C. translators used a native motif about a “sweet dew” thought to bring bounty, peace, and happiness to the land when it fell as rain from heaven. When 甘露 occurs in Chinese Buddhist texts, it describes S. *amṛta* with a concept familiar to the Chinese audience at the time. [\[back\]](#ref2)
-3. {:#n3} Compare this visualization with the description found in AN 6.10. While both exercises use the Buddha’s exalted example as an object of practice, the one in AN is an insight meditation, while this description appears to be a *samādhi* practice. It’s similar to the visualization practices that developed among Mahāyāna Buddhists, e.g. *The Visualization of the Buddha Amitāyus Sutra* (T365). Perhaps those practices were inspired existing *samādhi* practices that visualized an idealized Buddha Śākyamuni. [\[back\]](#ref3)
+3. {:#n3} Compare this visualization with the description found in AN 6.10. While both exercises use the Buddha’s exalted example as an object of practice, the one in AN is an insight meditation, while this description appears to be a *samādhi* practice. It’s similar to the visualization practices that developed among Mahāyāna Buddhists, e.g. *The Visualization of the Buddha Amitāyus Sūtra* (T365). Perhaps those practices were inspired by existing *samādhi* practices that visualized an idealized Buddha Śākyamuni. [\[back\]](#ref3)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 30 January 2023
+Last Revised: 11 March 2023
 {: .revised}
 
 ---
