--- a/01_agama/ekottarika/03/EA_03_08.md
+++ b/01_agama/ekottarika/03/EA_03_08.md
@@ -17,13 +17,13 @@ next: EA_03_09.html
 2\. It was then that the Bhagavān addressed the monks, “One should cultivate one thing and disseminate one thing. After cultivating this one thing, they’ll become well known and achieve a great reward and all good and complete attainments. They’ll attain the sweet-tasting dew and arrive at the unconditioned state. They then will achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves. What’s this one thing? It’s called recollecting breathing.”
 {:#p2}
 
-3\. The Buddha addressed the monks, “How does someone who cultivates the recollection of breathing become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruit of the ascetic, and bring about nirvāṇa themselves?”
+3\. The Buddha addressed the monks, “How does someone who cultivates the recollection of breathing become well known, achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state? How do they achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves?”
 {:#p3}
 
 4\. The monks then said to the Bhagavān, “What the Tathāgata says is the source of the teachings. Please, Bhagavān, explain the wonderful meaning of this for the monks. After we hear it from the Tathāgata, the monks will accept and retain it.”
 {:#p4}
 
-5\. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well! I will discern this for you in detail.”
+5\. The Bhagavān then told the monks, “Listen closely! Listen closely, and consider it well. I will discern this for you in detail.”
 {:#p5}
 
 They replied, “Yes, Bhagavān.”
@@ -31,29 +31,36 @@ They replied, “Yes, Bhagavān.”
 6\. Once the monks had accepted the teaching, the Bhagavān told them, “Suppose a monk sits cross-legged with correct posture and thought and fixes his attention on what’s in front of him. With no other idea, he focuses on recollecting breathing.
 {:#p6}
 
-7\. “‘Breathing’ means observing and knowing, ‘Now my breaths are long,’ when one’s breaths are long. It means observing and knowing, ‘Now my breaths are short,’ when one’s breaths are short. It means observing and knowing, ‘Now my breaths are cold,’ when one’s breaths are cold. It means observing and knowing, ‘Now my breaths are hot,’ when one’s breaths are hot. The practitioner fully observes their body, observing and knowing it from head to toe.
+7\. “‘Breathing’ means observing and knowing, ‘Now my breaths are long,’ when one’s breaths are long. It means observing and knowing, ‘Now my breaths are short,’ when one’s breaths are short. It means observing and knowing, ‘Now my breaths are very cold,’ when one’s breaths are cold. It means observing and knowing, ‘Now my breaths are hot,’ when one’s breaths are hot.[\[1\]](#n1){:#ref1} The practitioner fully observes their body, observing and knowing it from head to toe.
 {:#p7}
 
 8\. “It also means observing, ‘Some of my breaths are long, and some are short,’ when one’s breaths are long and short. They keep their body in mind, fully knowing their breaths to be long or short. They immediately discern and are fully aware of it as they breath in and out. If they keep their body in mind while knowing their breaths are long or short, then they will also know the number of breaths that are long or short, discerning and understanding it clearly.
 {:#p8}
 
-9\. “This is how someone who cultivates the recollection of breathing will become well known,[\[1\]](#n1){:#ref1} achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruit of the ascetic, and bring about nirvāṇa themselves. Therefore, monks, one should constantly attend to this and not part from the recollection of breathing. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”
+9\. “This is how someone who cultivates the recollection of breathing will become well known,[\[2\]](#n2){:#ref2} achieve a great reward and all good and complete attainments, attain the sweet-tasting dew, and arrive at the unconditioned state. They’ll achieve spiritual knowledge, dispel their confused ideas, win the fruits of the ascetic, and bring about nirvāṇa themselves.
 {:#p9}
 
-10\. When the monks heard what the Buddha taught, they rejoiced and approved.
+10\. “Therefore, monks, one should constantly attend to this and not part from the recollection of breathing. Then, they’ll win these good virtues. Thus, monks, you should train yourselves.”
 {:#p10}
+
+11\. When the monks heard what the Buddha taught, they rejoiced and approved.
+{:#p11}
 
 ---
 
 ### Notes
 
-1. {:#n1} *This is how … well known.* C. 如是，諸比丘，名曰念安般。便得具足⋯. The Taisho edition appears to be corrupt, for it omits mention of becoming well known. Lit., it reads: “Thus, monks, is called ‘recollecting breathing.’ Then, attaining its perfection …”. I’ve translated the passage assuming that the original followed the format of the initial sūtras in this chapter (i.e., 「是謂，諸比丘，若念安般者便有名譽⋯」). [\[back\]](#ref1)
+1. {:#n1} This inclusion of observing breaths as cold and hot is a peculiarity of EĀ’s version of the mindfulness of breathing that’s both confusing and intriguing. It reoccurs in EĀ 17.1, which is parallel to MN 62, so it’s unlikely to be a spurious addition.\\
+A possible connection occurs in a meditation manual (T614.15.275a11) produced by Kumārajīva in China about twenty years after the translation of EĀ. This text recommends that beginners be taught to count their breaths in order to remain mindful of them. When they’ve become skilled enough to stop counting, they are advised to discern the difference between inhaled and exhaled breaths by the fact that inhaled air is cold and exhaled air is warm. This, however, is not the same as our passage as it occurs in full in EĀ 17.1, which says the practitioner is aware of both inhaling and exhaling cold and warm breaths.\\
+Kumārajīva tended to base his teachings on a combination of Sarvāstivāda and Mahāyāna sources, as can be seen manifest at length in his *Commentary to the Large Perfection of Wisdom Sutra* (T1509). T614 was similarly a work drawn from multiple sources, and includes specific passages found in Aśvaghoṣa’s *Saundarananda*. Recent scholarship has led to the theory that Aśvaghoṣa was a Mahāsāṃghika Buddhist, and that he drew inspiration from the Sautrantika and/or Yogācara schools of northern Buddhism when composing the *Saundarananda*.\\
+But the mention of cold and warm breath is not found in the extant Mahāsāṃghika presentation of the mindfulness of breathing in the Chinese translation of their Vinaya (T1425.22.254c), nor in the *Yogācarabhūmi* (T1579.27.432a). Thus far, I’ve been stymied in my search for a direct parallel to this passage, which would lend us some welcome evidence as to the provenance of this particular EĀ if one can be located. [\[back\]](#ref1)
+2. {:#n2} *This is how … well known.* C. 如是，諸比丘，名曰念安般。便得具足⋯. The Taisho edition appears to be corrupt, for it omits mention of becoming well known. Lit., it reads: “Thus, monks, is called ‘recollecting breathing.’ Then, attaining its perfection …”. I’ve translated the passage assuming that the original followed the format of the initial sūtras in this chapter (i.e., 「是謂，諸比丘，若念安般者便有名譽⋯」). [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 6 February 2023
+Last Revised: 11 March 2023
 {: .revised}
 
 ---
