--- a/01_agama/ekottarika/09/EA_09_08.md
+++ b/01_agama/ekottarika/09/EA_09_08.md
@@ -4,7 +4,7 @@ title: 'The Numerical Discourses | 9. The Only Son | 7. A Man’s Perception'
 type: kramdown
 base: ../../../
 previous: EA_09_07.html
-next: ../12/EA_12_01.html
+next: EA_09_09.html
 ---
 
 # [The Numerical Discourses](../index.html)
