--- a/01_agama/ekottarika/10/EA_10_02.md
+++ b/01_agama/ekottarika/10/EA_10_02.md
@@ -4,7 +4,7 @@ title: 'The Numerical Discourses | Chapter 10: The Guarded Mind | 2. No Pride (2
 type: kramdown
 base: ../../../
 previous: EA_10_01.html
-next: ../12/EA_12_01.html
+next: EA_10_03.html
 ---
 
 # [The Numerical Discourses](../index.html)
