--- a/01_agama/ekottarika/10/EA_10_04.md
+++ b/01_agama/ekottarika/10/EA_10_04.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Numerical Discourses | Chapter 10: The Guarded Mind | 4. Recollecting Generosity (2)'
+title: 'The Numerical Discourses | Chapter 10: The Guarded Mind | 4. Generosity'
 type: kramdown
 base: ../../../
 previous: EA_10_03.html
@@ -9,7 +9,7 @@ next: EA_10_05.html
 
 # [The Numerical Discourses](../index.html)
 ## Chapter 10: The Guarded Mind
-### 4. Recollecting Generosity (2)
+### 4. Generosity
 
 1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
