--- a/01_agama/ekottarika/10/EA_10_04.md
+++ b/01_agama/ekottarika/10/EA_10_04.md
@@ -65,10 +65,10 @@ The Bhagavān then silently accepted that wealthy man’s invitation.
 14\. Then, the Bhagavān and Anāthapiṇḍada had a discussion about the sublime Dharma. After discussing the sublime Dharma, the Buddha rose from his seat and departed.
 {:#p14}
 
-15\. At a later time, Anāthapiṇḍada arranged for charitable events at each of the city’s four gates, a fifth in the market, and a sixth at his home. He gave food if people needed food and drink if drink was needed. He provided to everyone what carts, music, incense, and jewelry that they needed.
+15\. At a later time, Anāthapiṇḍada gave out gifts broadly at each of the city’s four gates, a fifth in the market, and a sixth at his home. He gave food if people needed food and drink if drink was needed. He provided to everyone what carts, music, incense, and jewelry that they needed.
 {:#p15}
 
-16\. The Bhagavān heard about these charitable events held by Anāthapiṇḍada at the city’s four gates, that he had also given to the needy in the marketplace, and that he again gave measureless gifts from inside his own home.
+16\. The Bhagavān heard about Anāthapiṇḍada giving out gifts broadly at the city’s four gates, that he had also given to the needy in the marketplace, and that he again gave measureless gifts from inside his own home.
 {:#p16}
 
 17\. The Bhagavān then told the monks, “Among my disciples, the layman who delights most in charity is that wealthy man Sudatta.”[\[2\]](#n2){:#ref2}
@@ -88,7 +88,7 @@ The Bhagavān then silently accepted that wealthy man’s invitation.
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 23 March 2023
+Last Revised: 2 April 2023
 {: .revised}
 
 ---
