--- a/01_agama/ekottarika/10/EA_10_07.md
+++ b/01_agama/ekottarika/10/EA_10_07.md
@@ -4,7 +4,7 @@ title: 'The Numerical Discourses | Chapter 10: The Guarded Mind | 7. Merits of G
 type: kramdown
 base: ../../../
 previous: EA_10_06.html
-next: ../12/EA_12_01.html
+next: EA_10_08.html
 ---
 
 # [The Numerical Discourses](../index.html)
