--- a/01_agama/ekottarika/10/EA_10_05.md
+++ b/01_agama/ekottarika/10/EA_10_05.md
@@ -29,7 +29,7 @@ next: EA_10_06.html
 6\. The Bhagavān told him, “Good, wealthy man! Good! You focus on this one thought of giving widely with a bodhisattva’s heart. Indeed, these sentient beings depend on food for their survival. Without food, they die.
 {:#p6}
 
-7\. “Wealthy man, you’ll win a great reward and get a great reputation for that great reward. Your name will travel in all directions, and you’ll gain the Dharma flavor of the sweet dew. Why is that? The bodhisattva’s abode is to focus on generosity with an equitable heart. He focuses solely on recollecting the varieties of sentient beings that depend on food to live. With food, they survive. Without food, they die. This, wealthy man, is called a bodhisattva whose heart abides securely and focuses on broad generosity.”
+7\. “Wealthy man, you’ll win a great reward and get a great reputation for that great reward. Your name will travel in all directions, and you’ll gain the Dharma flavor of the sweet dew. Why is that? The bodhisattva’s abode is to give with an equitable heart. He focuses on this one thought, being mindful of the varieties of sentient beings that depend on food to live. With food, they survive. Without food, they die. This, wealthy man, is called a bodhisattva whose heart abides securely and gives broadly.”
 {:#p7}
 
 8\. The Bhagavān then spoke in verse:
@@ -56,7 +56,7 @@ Who’ll help them cross over to the far shore.
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 23 March 2023
+Last Revised: 2 April 2023
 {: .revised}
 
 ---
