Added MA 57, MA 85, and EA 11.6.

--- a/01_agama/ekottarika/11/EA_11_05.md
+++ b/01_agama/ekottarika/11/EA_11_05.md
@@ -4,7 +4,7 @@ title: 'The Numerical Discourses | Chapter 11: The Non-Returner | 5. Heart'
 type: kramdown
 base: ../../../
 previous: EA_11_04.html
-next: ../12/EA_12_01.html
+next: EA_11_06.html
 ---
 
 # [The Numerical Discourses](../index.html)
@@ -27,13 +27,12 @@ next: ../12/EA_12_01.html
 
 ### Notes
 
-1. {:#n1} This and the next <em>sūtra</em> are similar those found in <a href="https://suttacentral.net/an1.21-30/en/sujato" target="_blank">AN 1.21-30</a>. [\[back\]](#ref1)
-
+1. {:#n1} This and the next <em>sūtra</em> are similar to those found in <a href="https://suttacentral.net/an1.21-30/en/sujato" target="_blank">AN 1.21-30</a>. [\[back\]](#ref1)
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 2 April 2023
+Last Revised: 8 April 2023
 {: .revised}
 
 ---
