--- a/01_agama/ekottarika/10/EA_10_04.md
+++ b/01_agama/ekottarika/10/EA_10_04.md
@@ -32,7 +32,7 @@ They replied, “Yes, Bhagavān!” The monks then accepted the teaching from th
 5\. “They’re like a farmer cultivating their land. They remove debris and weeds so that they can harvest their crop. A monk must constantly abandon the illness of the five proliferating aggregates as he seeks to enter the city of Nirvāṇa fearlessly. Thus, monks, should a donor or almsgiver be generous when providing services and offerings to diligent and learned people who observe the precepts.”
 {:#p5}
 
-6\. The wealthy man Anāthapiṇḍada[\[1\]](#n1){:#ref1} was in the audience at the time. He then said to the Bhagavān, “So it is, Bhagavān! So, it is, Tathāgata! All donors and their recipients are like auspicious vases. Those who accept their donations are like King Vaiśravaṇa. They encourage people to practice generosity like a friend or parent. A person who accepts donations will have excellent fortune in the next life. All donors and their recipients are like householders.”
+6\. The wealthy man Anāthapiṇḍada[\[1\]](#n1){:#ref1} was in the audience at the time. He then said to the Bhagavān, “So it is, Bhagavān! So it is, Tathāgata! All donors and their recipients are like auspicious vases. Those who accept their donations are like King Vaiśravaṇa. They encourage people to practice generosity like a friend or parent. A person who accepts donations will have excellent fortune in the next life. All donors and their recipients are like householders.”
 {:#p6}
 
 The Bhagavān told him, “So it is, wealthy man. It’s as you say.”
