--- a/01_agama/ekottarika/11/EA_11_06.md
+++ b/01_agama/ekottarika/11/EA_11_06.md
@@ -1,15 +1,15 @@
 ---
 layout: default
-title: 'The Numerical Discourses | Chapter 11: The Non-Returner | Heart (2)'
+title: 'The Numerical Discourses | Chapter 11: The Non-Returner | 6. Heart (2)'
 type: kramdown
 base: ../../../
 previous: EA_11_05.html
-next: ../12/EA_12_01.html
+next: EA_11_07.html
 ---
 
 # [The Numerical Discourses](../index.html)
 ## Chapter 11: The Non-Returner
-### Heart (2)
+### 6. Heart (2)
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
