--- a/01_agama/ekottarika/08/EA_08_03.md
+++ b/01_agama/ekottarika/08/EA_08_03.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Numerical Discourses | 8. Asura | 3. The Single-File Path'
+title: 'The Numerical Discourses | 8. Asura | 3. The Single-Entry Path'
 type: kramdown
 base: ../../../
 previous: EA_08_02.html
@@ -9,12 +9,12 @@ next: EA_08_04.html
 
 # [The Numerical Discourses](../index.html)
 ## Chapter 8: Asura
-### 3. The Single-File Path
+### 3. The Single-Entry Path
 
 1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “When one person appears in the world, the single-file path[\[1\]](#n1){:#ref1} arises in the world. … the two truths … the three gateways to liberation … the true teaching of four truths … the five faculties … the cessation of six wrong views … the seven factors of awakening … the eightfold noble path … the nine abodes of sentient beings … the ten powers of the Tathāgata … the eleven liberations of kindness[\[2\]](#n2){:#ref2} arise in the world. Who is that one person? He is called the Tathāgata, the Arhat, the Correctly and Perfectly Awakened One. He is known as the one person who appears in the world, and then the single-file path arises in the world. … the two truths … the three gateways to liberation … the true teaching of four truths … the five faculties … the cessation of six wrong views … the seven factors of awakening … the eightfold noble path … the nine abodes of sentient beings … the ten powers of the Tathāgata … the eleven liberations of kindness arise in the world.
+2\. It was then that the Bhagavān addressed the monks, “When one person appears in the world, the single-entry path[\[1\]](#n1){:#ref1} arises in the world. … the two truths … the three gateways to liberation … the true teaching of four truths … the five faculties … the cessation of six wrong views … the seven factors of awakening … the eightfold noble path … the nine abodes of sentient beings … the ten powers of the Tathāgata … the eleven liberations of kindness[\[2\]](#n2){:#ref2} arise in the world. Who is that one person? He is called the Tathāgata, the Arhat, the Correctly and Perfectly Awakened One. He is known as the one person who appears in the world, and then the single-entry path arises in the world. … the two truths … the three gateways to liberation … the true teaching of four truths … the five faculties … the cessation of six wrong views … the seven factors of awakening … the eightfold noble path … the nine abodes of sentient beings … the ten powers of the Tathāgata … the eleven liberations of kindness arise in the world.
 {:#p2}
 
 3\. “Therefore, monks, always pay respect to the Tathāgata. Thus, monks, you should train yourselves.”
@@ -27,7 +27,7 @@ next: EA_08_04.html
 
 ### Notes
 
-1. {:#n1} *single-file path*. C. 一入道, P. *ekāyana magga*. Lit. “one-entry path.” In S. this term appears to mean a narrow path that allows only one person to walk at a time (Edgerton, 154). Pali interpreters seem to prefer “one-way path.” I’ve opted for the S. reading, as here it appears to refer to it being so difficult to traverse that only a Buddha can discover it. [\[back\]](#ref1)
+1. {:#n1} *single-entry path*. C. 一入道, P. *ekāyana magga*. Lit. “one-entry path.” In S. this term appears to mean a narrow path that allows only one person to walk at a time (Edgerton, 154). Pali interpreters seem to prefer “one-way path.” Cf. the notes to <a href="../12/EA_12_1.html" target="_blank">EĀ 12.1</a> for more indepth comments about this term. [\[back\]](#ref1)
 2. {:#n2} *eleven liberations of kindness*. Cf. AN 8.1, AN 11.15, EĀ 49.10, and T138. The “eleven liberations” must refer to the eleven rewards of developing kindness given in these parallels. [\[back\]](#ref2)
 
 ---
