--- a/01_agama/ekottarika/12/EA_12_01.md
+++ b/01_agama/ekottarika/12/EA_12_01.md
@@ -4,7 +4,7 @@ title: 'The Numerical Discourses | 12. One Entry to the Path | 1. The Four Stati
 type: kramdown
 base: ../../../
 previous: ../11/EA_11_10.html
-next: ../19/EA_19_01.html
+next: EA_12_02.html
 ---
 
 # [The Numerical Discourses](../index.html)
